start style components

--- a/src/index.css
+++ b/src/index.css
@@ -2,11 +2,15 @@
   font-family: Inter, sans-serif;
 
   /* --main-color: #3b5998;
+  --main-color-2: #4267b3;
   --blue: #8b9dc3;
-  --light-blue: #dfe3ee;
-  --light-gray: #f7f7f7;
 
   --text-color: #616771;
+  --text-color-2: #90949c;
+
+  --light-blue: #dfe3ee;
+  --text-color-3: #e9ebee;
+  --light-gray: #f7f7f7;
 
   --white: #fff;
   --black: #000; */
