--- a/src/components/Dialogs/Message/Message.module.css
+++ b/src/components/Dialogs/Message/Message.module.css
@@ -5,6 +5,6 @@
   border-radius: 10px;
   background-color: #fff;
   margin-bottom: 5px;
-  width: 50%;
+  width: fit-content;
   /* text-align: left; */
 }
