--- a/src/components/Profile/MyPosts/Post/Post.module.css
+++ b/src/components/Profile/MyPosts/Post/Post.module.css
@@ -1,5 +1,15 @@
 .item {
   color: #616771;
+  display: flex;
+  flex-direction: column;
+  padding: 0 5px;
+  gap: 5px;
+}
+
+.content {
+  display: flex;
+  align-items: center;
+  gap: 10px;
 }
 
 .item img {
