--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -3,14 +3,11 @@
   background-color: #3b5998;
   display: flex;
   align-items: center;
-  padding-left: 16px;
+  justify-content: space-between;
+  padding: 0 16px;
 }
 
-/* .header img {
-  width: 20px;
-} */
-
-.loginBlock {
-  float: right;
+.loginBlock a {
+  text-decoration: none;
   color: #fff;
 }
